--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,8 @@ jobs:
 
       - name: Build PlatformIO Project
         run: pio run
+      - name: Output results
+        uses: actions/upload-artifact@v4
+        with:
+          name: firmware
+          path: .pio/build/pico/firmware.uf2
