--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,11 @@ lib_deps =
 	sparkfun/SparkFun BMI270 Arduino Library@^1.0.2
 	dfrobot/DFRobot_QMC5883@^1.0.0
 	dfrobot/DFRobot_BMP3XX @ ^1.0.3
+[env:esp32]
+platform = espressif32
+board = esp32-s3-devkitm-1
+framework = arduino
+lib_deps = 
+	sparkfun/SparkFun BMI270 Arduino Library@^1.0.2
+	dfrobot/DFRobot_QMC5883@^1.0.0
+	dfrobot/DFRobot_BMP3XX @ ^1.0.3
