updated data struct with new data and pin conf for esp32

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ lib_deps =
 	sparkfun/SparkFun BMI270 Arduino Library@^1.0.2
 	dfrobot/DFRobot_QMC5883@^1.0.0
 	dfrobot/DFRobot_BMP3XX @ ^1.0.3
+	mikalhart/TinyGPSPlus@^1.1.0
 [env:esp32]
 platform = espressif32
 board = esp32-s3-devkitm-1
@@ -24,3 +25,4 @@ lib_deps =
 	sparkfun/SparkFun BMI270 Arduino Library@^1.0.2
 	dfrobot/DFRobot_QMC5883@^1.0.0
 	dfrobot/DFRobot_BMP3XX @ ^1.0.3
+	mikalhart/TinyGPSPlus@^1.1.0
