removed pi build, hope action works

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:pico]
-platform = raspberrypi
-board = pico
-framework = arduino
-lib_deps = 
-	sparkfun/SparkFun BMI270 Arduino Library@^1.0.2
-	dfrobot/DFRobot_QMC5883@^1.0.0
-	dfrobot/DFRobot_BMP3XX @ ^1.0.3
-	mikalhart/TinyGPSPlus@^1.1.0
+; [env:pico]
+; platform = raspberrypi
+; board = pico
+; framework = arduino
+; lib_deps = 
+; 	sparkfun/SparkFun BMI270 Arduino Library@^1.0.2
+; 	dfrobot/DFRobot_QMC5883@^1.0.0
+; 	dfrobot/DFRobot_BMP3XX @ ^1.0.3
+; 	mikalhart/TinyGPSPlus@^1.1.0
 [env:esp32]
 platform = espressif32
 board = esp32-s3-devkitm-1
